# todo-ddd-rust

./: Cargo.toml
src/: main.rs
src/application/: todo_service.rs
src/domain/: todo.rs
src/infrastructure/: web.rs
