[package]
name = "rust_todo_api"
version = "0.1.0"
edition = "2021"

[lib]
name = "rust_todo_api"
path = "src/lib.rs"

[[bin]]
name = "rust_todo_api"
path = "src/main.rs"

[dependencies]
actix-web = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
